--- a/package.json
+++ b/package.json
@@ -16,19 +16,5 @@
   "bugs": {
     "url": "https://github.com/djdaquin/characterscramble.com/issues"
   },
-  "homepage": "https://github.com/djdaquin/characterscramble.com#readme",
-  "dependencies": {
-    "express": "^4.15.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.4",
-    "redux": "^3.6.0",
-    "redux-logger": "^3.0.1",
-    "redux-thunk": "^2.2.0",
-    "sequelize": "^3.30.4",
-    "webpack": "^2.5.1"
-  },
-  "devDependencies": {
-    "redux-devtools": "^3.4.0"
-  }
+  "homepage": "https://github.com/djdaquin/characterscramble.com#readme"
 }
