--- a/package.json
+++ b/package.json
@@ -16,5 +16,19 @@
   "bugs": {
     "url": "https://github.com/djdaquin/characterscramble.com/issues"
   },
-  "homepage": "https://github.com/djdaquin/characterscramble.com#readme"
+  "homepage": "https://github.com/djdaquin/characterscramble.com#readme",
+  "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "express": "^4.15.3",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-hot-loader": "^1.3.1",
+    "webpack": "^2.5.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
+  }
 }
