--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass": "^4.3.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
+    "react-router": "^4.1.1",
     "sass-loader": "^6.0.2"
   },
   "devDependencies": {
