--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "sass-loader": "^6.0.2"
   },
   "devDependencies": {
