Adding API, routing, and allowing console in linting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,10 @@
             "error",
             "always"
         ],
+        "no-console": 0,
         "no-unused-vars": 0
+    },
+    "globals": {
+      "process": 1
     }
 }
