--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "jquery": "^3.2.1",
     "morgan": "^1.8.2",
     "node-sass": "^4.3.0",
+    "pg": "^7.1.0",
+    "pg-hstore": "^2.3.2",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "sequelize": "^4.4.2",
+    "sequelize-cli": "^2.8.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
